--- a/style.css
+++ b/style.css
@@ -1,115 +1,184 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+
+:root {
+	--white: #fff;
+	--black: #000;
+	--github-fill: #322085;
+	--github-color: var(--white);
+	--github-focus: rgb(255, 98, 0);
+	--label-color: rgba(255, 255, 255, 0.7);
+	--gradient: linear-gradient(0deg, #322085, #fd510d);
+	--poppins: "Poppins", sans-serif;
+}
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
+
 body {
-  position: relative;
-  font-family: "Poppins", sans-serif;
+	position: relative;
+	font-family: var(--poppins);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
+
 .wrapper,
 .search-data {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
+
 .wrapper {
-  position: fixed;
-  height: 0px;
-  width: 0px;
-  border-radius: 100%;
-  background: linear-gradient(0deg, #322085, #fd510d);
-  transition: all 0.4s linear;
+	position: fixed;
+	height: 0px;
+	width: 0px;
+	border-radius: 100%;
+	background: var(--gradient);
+	transition: all 0.4s linear;
 }
+
 .wrapper.active {
-  height: 200%;
-  width: 200%;
+	height: 200%;
+	width: 200%;
 }
 /* default of height and width was 4000px */
 
 .search-btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 60px;
-  width: 60px;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 50%;
-  background: linear-gradient(180deg, #322085, #fd510d);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 76px;
+	width: 76px;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 50%;
+	background: var(--gradient);
 }
+
 .search-btn span {
-  color: #fff;
-  font-size: 22px;
-  line-height: 60px;
+	margin: 7px 7px;
+	color: var(--white);
+	font-size: 48px;
+	line-height: 60px;
 }
+
 .search-data {
-  position: absolute;
-  height: 50px;
-  width: 400px;
-  display: flex;
-  text-align: center;
-  /* display: none; */
+	position: absolute;
+	height: 50px;
+	width: 400px;
+	display: flex;
+	text-align: center;
 }
+
 .search-data input {
-  height: 100%;
-  width: 100%;
-  background: none;
-  border: none;
-  outline: none;
-  font-size: 22px;
-  font-weight: 500;
-  color: #fff;
+	height: 100%;
+	width: 100%;
+	background: none;
+	border: none;
+	outline: none;
+	font-size: 22px;
+	font-weight: 500;
+	color: var(--white);
 }
 
 .search-data .line {
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #fff;
-  bottom: 0;
-  transform: scaleX(0);
-  transition: transform 0.4s 0.3s linear;
+	position: absolute;
+	height: 3px;
+	width: 100%;
+	background: var(--white);
+	bottom: 0;
+	transform: scaleX(0);
+	transition: transform 0.4s 0.3s linear;
 }
+
 .search-data .line.active {
-  transform: scaleX(1);
+	transform: scaleX(1);
 }
+
 .search-data label {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  font-size: 20px;
-  transform: translateY(-50%);
-  pointer-events: none;
-  color: rgba(255, 255, 255, 0.7);
+	position: absolute;
+	top: 50%;
+	left: 0;
+	font-size: 20px;
+	transform: translateY(-50%);
+	pointer-events: none;
+	color: var(--label-color);
 }
+
 .search-data input:valid ~ label {
-  opacity: 0;
+	opacity: 0;
 }
+
 .search-data span {
-  color: #fff;
-  position: absolute;
-  width: 50px;
-  font-size: 25px;
-  right: 0;
-  top: 0;
-  line-height: 45px;
-  cursor: pointer;
+	color: var(--white);
+	position: absolute;
+	width: 50px;
+	font-size: 25px;
+	right: 0;
+	top: 0;
+	line-height: 45px;
+	cursor: pointer;
 }
+
 .close-btn {
-  position: absolute;
-  z-index: 99;
-  right: 25px;
-  top: 25px;
-  font-size: 25px;
-  color: #fff;
-  cursor: pointer;
+	position: absolute;
+	z-index: 99;
+	right: 25px;
+	top: 16px;
+	font-size: 48px;
+	color: var(--white);
+	cursor: pointer;
 }
+
 .search-data,
 .search-data span,
 .search-data label,
 .close-btn {
-  display: none;
+	display: none;
+}
+
+.github-corner:focus svg path {
+	fill: var(--github-focus);
+}
+
+.github-corner:focus .octo-arm,
+.github-corner:focus .octo-body {
+	fill: var(--github-color);
+}
+
+.github-corner:hover .octo-arm,
+.github-corner:focus .octo-arm {
+	animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	20%,
+	60% {
+		transform: rotate(-25deg);
+	}
+	40%,
+	80% {
+		transform: rotate(10deg);
+	}
+}
+
+@media (max-width: 500px) {
+	.github-corner:hover .octo-arm {
+		animation: none;
+	}
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out;
+	}
+
+	.search-data {
+		width: 250px;
+	}
 }
